Fix gap with title bar

--- a/LANCommander.Launcher/Styles/_window.scss
+++ b/LANCommander.Launcher/Styles/_window.scss
@@ -16,7 +16,7 @@
     }
 
     &-content {
-        top: var(--pb-custom-window-header-height) !important;
+        top: 0 !important;
         left: 0 !important;
         right: 0 !important;
         bottom: 0 !important;
